2.2.2
-----
o Fixes problem when using named paths and aggregation
o Fixes #4462 - RULE planner inconsistent in order of path elements

2.2.1
-----
o NOTE: Support for Cypher version 2.0 and 2.1 will be removed in Neo4j 2.3
o Fixes #4315 - UNWIND not binding to identifier
o Fixes #4341 - START clause ignores associated WHERE
o Fixes #4331 - Alleged duplicate result column names
o Fixes #4342 - NameSpacing Identifiers in StartItem which are not in scope
o Fixes #4332 - ORDER BY not seeing identifiers from earlier scope
o Fixes problems with relationships passing through WITH in RULE planner

2.2.0
-----
o Fixed problem where undirected paths weren't being properly projected
o Introduced DP based algorithm as a planner option
o Ensure that the relationship unique constraint is respected when solving patterns in pattern-expressions
o Fixed bug when constructing named paths from undirected variable length relationship patterns
o Fixed NPEs when serializing data with missing keys through LOAD CSV

2.2.0-RC1
---------
o Fixes problem where eagerness was unnecessarily being introduced.
o Updates to the cost model to reflect measured costs of operators.
o Fixes problem with PERIODIC COMMIT interacting badly with LOAD CSV

2.2.0-M04
---------
o Fixes #3910 - Semantic errors not propagated correctly to the user
o Support ExpandInto mode for variable length paths
o Faster performance when counting number of relationships
o Support ExpandInto mode for projection of relationship end points
o Estimated rows in plan descriptions are rounded to three decimals
o Fixes DbHit counting for pattern expressions
o Faster performance when starting a pattern expression from a relationship
o Improved compile times by faster AST rewriting
o Fixes problem where the rule planner was always used for pattern expressions
o Adds the KEYS() function to Cypher
o Better performance by allowing index lookups on the RHS of Apply
o Fixes bug when using named paths and undirected relationships

